// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavDrawerProfileItem > renders correctly 1`] = `
<v-list-stub
  activatable="false"
  border="false"
  class="px-0"
  data-v-a230c9a1=""
  density="default"
  disabled="false"
  filterable="false"
  id="main-nav-profile"
  itemchildren="children"
  itemprops="props"
  items=""
  itemsregistration="render"
  itemtitle="title"
  itemtype="type"
  itemvalue="value"
  lines="two"
  mandatory="false"
  nav="true"
  navigationstrategy="focus"
  openstrategy="list"
  returnobject="false"
  selectable="false"
  selectstrategy="single-leaf"
  slim="false"
  tag="div"
  theme="dark"
  tile="false"
  variant="text"
>
  <v-list-item-stub
    border="false"
    class="nav-drawer-item px-3"
    data-v-a230c9a1=""
    density="default"
    disabled="false"
    exact="false"
    inactive="false"
    lines="false"
    nav="false"
    replace="false"
    ripple="true"
    slim="false"
    tag="div"
    tile="false"
    variant="text"
  >
    <v-list-item-title-stub
      class="text-body-large text-white font-weight-regular"
      data-v-a230c9a1=""
      id="main-nav-user-name"
      tag="div"
    >
      Hello user!
    </v-list-item-title-stub>
    <v-list-item-subtitle-stub
      class="text-body-medium text-white"
      data-v-a230c9a1=""
      id="main-nav-user-email"
      tag="div"
    >
      string
    </v-list-item-subtitle-stub>
  </v-list-item-stub>
</v-list-stub>
`;

exports[`NavDrawerProfileItem > renders correctly in mobile view 1`] = `
<v-list-stub
  activatable="false"
  border="false"
  class="px-0"
  data-v-a230c9a1=""
  density="default"
  disabled="false"
  filterable="false"
  id="main-nav-profile"
  itemchildren="children"
  itemprops="props"
  items=""
  itemsregistration="render"
  itemtitle="title"
  itemtype="type"
  itemvalue="value"
  lines="two"
  mandatory="false"
  nav="true"
  navigationstrategy="focus"
  openstrategy="list"
  returnobject="false"
  selectable="false"
  selectstrategy="single-leaf"
  slim="false"
  tag="div"
  theme="dark"
  tile="false"
  variant="text"
>
  <v-list-item-stub
    border="false"
    class="nav-drawer-item px-3"
    data-v-a230c9a1=""
    density="default"
    disabled="false"
    exact="false"
    inactive="false"
    lines="false"
    nav="false"
    replace="false"
    ripple="true"
    slim="false"
    tag="div"
    tile="false"
    variant="text"
  >
    <v-list-item-title-stub
      class="text-body-medium text-white font-weight-regular"
      data-v-a230c9a1=""
      id="main-nav-user-name"
      tag="div"
    >
      Hello user!
    </v-list-item-title-stub>
    <v-list-item-subtitle-stub
      class="text-body-small text-white"
      data-v-a230c9a1=""
      id="main-nav-user-email"
      tag="div"
    >
      string
    </v-list-item-subtitle-stub>
  </v-list-item-stub>
</v-list-stub>
`;
